@@ -1,22 +1,22 @@
 package io.devfactory.account.service;
 
-import static java.util.stream.Collectors.toList;
-import static org.springframework.data.domain.Sort.Direction.ASC;
-
 import io.devfactory.account.domain.Account;
 import io.devfactory.account.domain.AccountRole;
 import io.devfactory.account.domain.Role;
 import io.devfactory.account.repository.AccountRoleRepository;
 import io.devfactory.account.repository.UserRepository;
-import java.util.List;
-import java.util.Set;
-import javax.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
+
+import javax.persistence.EntityNotFoundException;
+import java.util.List;
+import java.util.Set;
+
+import static org.springframework.data.domain.Sort.Direction.ASC;
 
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -36,7 +36,7 @@ public class UserService {
 
   public List<Account> findUserAll() {
     final List<Account> findAccounts = userRepository.findAll(Sort.by(ASC, "id"));
-    return findAccounts.stream().map(this::changeRoles).collect(toList());
+    return findAccounts.stream().map(this::changeRoles).toList();
   }
 
   @Transactional
